Inicio de sesion con backend

--- a/app/InicioSesion/InicioDeSesin.css
+++ b/app/InicioSesion/InicioDeSesin.css
@@ -60,7 +60,7 @@ body{
   
 
 
-  #email {
+  #codigo {
     border-radius: 5px; /* Redondea las esquinas */
     padding: 5px; /* Agrega espacio interno */
     width: 200px; /* Ajusta el ancho según sea necesario */
