--- a/app/Registro/Registro.css
+++ b/app/Registro/Registro.css
@@ -43,9 +43,11 @@ body{
     font-weight: bold;
   }
   
-  .form-group {
-    margin-bottom: 15px;
-  }
+.form-group {
+  display: flex; /* Utiliza flexbox para alinear los elementos en una fila */
+  align-items: center; /* Alinea los elementos verticalmente en el centro */
+  margin-bottom: 15px;
+}
   
   .login-btn {
     background-color: #734a91; /* Color para el botón de Acceder */
@@ -67,7 +69,7 @@ body{
     width: 200px; /* Ajusta el ancho según sea necesario */
     background-color: whitesmoke;
     color: gray;
-    width: 80%;
+    width: 75%;
     height: 45px;
     margin-left: 10%;
     margin-right: 10%;
@@ -80,7 +82,7 @@ body{
     width: 200px; /* Ajusta el ancho según sea necesario */
     background-color: whitesmoke;
     color: gray;
-    width: 80%;
+    width: 75%;
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 0.5%;
@@ -94,7 +96,7 @@ body{
     width: 200px; /* Ajusta el ancho según sea necesario */
     background-color: whitesmoke;
     color: gray;
-    width: 80%;
+    width: 75%;
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 0.5%;
@@ -107,7 +109,7 @@ body{
     width: 200px; /* Ajusta el ancho según sea necesario */
     background-color: whitesmoke;
     color: gray;
-    width: 80%;
+    width: 75%;
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 0.5%;
@@ -120,7 +122,7 @@ body{
     width: 200px; /* Ajusta el ancho según sea necesario */
     background-color: whitesmoke;
     color: gray;
-    width: 80%;
+    width: 75%;
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 0.5%;
@@ -159,8 +161,8 @@ body{
     background-color: whitesmoke;
     color: transparent;
     width: 33%;
-    margin-left: 10%;
-    margin-right: 4%;
+    margin-left: 33.5%;
+    margin-right: 33.5%;
     margin-bottom: 0.5%;
     height: 45px;
     cursor: pointer;
@@ -186,18 +188,20 @@ body{
     background-color: whitesmoke;
     color: gray;
     width: 33%;
-    margin-left: 10%;
-    margin-right: 4%;
+    margin-left: 30%;
+    margin-right: 30%;
     margin-bottom: 0.5%;
     height: 45px;
     cursor: pointer;
   }
   #faceImage::-webkit-file-upload-button {
     display: none; /* Oculta el botón de selección de archivo */
+    
   }
 
   #faceImage{
     color: transparent;
+    
   }
   
   #faceImage::before {
