--- a/app/InicioSesion/InicioDeSesin.css
+++ b/app/InicioSesion/InicioDeSesin.css
@@ -1,138 +1,150 @@
-body{
-    background: linear-gradient(to bottom, #ffffff 50%, #734a91 50%);
+body {
+  background: linear-gradient(to bottom, #ffffff 50%, #734a91 50%);
+  margin: 0;
 }
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .left-panel {
-    background-color: white; /* Color para el panel izquierdo */
-    padding: 20px;
-    border: 1px solid black;
-    width: 70%;
-    margin-left: 20%;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-    height: 75%;
-    border-top-left-radius: 3%;
-    border-bottom-left-radius: 3%;
-  }
-  
-  .right-panel {
-    padding: 20px;
-    background: linear-gradient(203.91deg, #e0b8ff, #734a91 83.33%);
-    width: 70%;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-    height: 75%;
-    border-top-right-radius: 3%;
-    border-bottom-right-radius: 3%;
-    display: flex; /* Utilizar flexbox para controlar el diseño */
-    flex-direction: column; /* Alinear los elementos en una columna */
-    justify-content: space-between; /* Distribuir el espacio verticalmente */
-  }
-  
-  .title {
-    margin-bottom: 20px;
-    text-align: center;
-    color: gray;
-    margin-top: 20%;
-    margin-bottom: 15%;
-    font-size: 200%;
-    font-weight: bold;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .login-btn {
-    background-color: #734a91; /* Color para el botón de Acceder */
-    border-radius: 7%;
-    color: white;
-    padding: 10px 20px;
-    cursor: pointer;
-    align-items: center;
-    display: block;
-  margin: 0 auto;
-  }
-  
-
-
-  #codigo {
-    border-radius: 5px; /* Redondea las esquinas */
-    padding: 5px; /* Agrega espacio interno */
-    width: 200px; /* Ajusta el ancho según sea necesario */
-    background-color: whitesmoke;
-    color: gray;
-    width: 80%;
-    height: 45px;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-  #password {
-    border-radius: 5px; /* Redondea las esquinas */
-    padding: 5px; /* Agrega espacio interno */
-    width: 200px; /* Ajusta el ancho según sea necesario */
-    background-color: whitesmoke;
-    color: gray;
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 10%;
-    height: 45px;
+.left-panel {
+  /*configuracion panel izquierdo (Blanco)*/
+  background-color: white;
+  padding: 20px;
+  border: 1px solid rgb(168, 123, 199);
+  width: 70%;
+  margin-left: 20%;
+  box-shadow: 5px 5px 5px rgba(37, 37, 37, 0.5);
+  height: 75%;
+  border-top-left-radius: 5%;
+  border-bottom-left-radius: 5%;
+}
 
+.right-panel {
+  /*configuracion panel derecho (Morado)*/
+  padding: 20px;
+  background: linear-gradient(203.91deg, #e0b8ff, #734a91 83.33%);
+  width: 70%;
+  box-shadow: 5px 5px 5px rgba(37, 37, 37, 0.5);
+  height: 75%;
+  margin-right: 20%;
+  border-top-right-radius: 5%;
+  border-bottom-right-radius: 5%;
+  display: flex; /* Utilizar flexbox para controlar el diseño */
+  flex-direction: column; /* Alinear los elementos en una columna */
+  justify-content: space-between; /* Distribuir el espacio verticalmente */
+}
+
+.title {
+  /* Titulo Inicio de Sesion */
+  text-align: center;
+  color: gray;
+  margin-top: 15%;
+  margin-bottom: 15%;
+  font-size: 200%;
+  font-weight: bold;
+  font-family: "Nunito", sans-serif;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.login-btn {
+  /* Botón de Acceder */
+  background-color: #734a91;
+  border-radius: 1ch;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  align-items: center;
+  display: block;
+  margin: 0 auto;
+}
+
+#codigo {
+  /* Casilla codigo*/
+  border-radius: 7px;
+  padding: 8px;
+  width: 200px;
+  background-color: whitesmoke;
+  color: gray;
+  width: 80%;
+  height: 45px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 2%;
+}
+
+#password {
+  /* Casilla contraseña */
+  border-radius: 7px;
+  padding: 8px;
+  width: 200px;
+  background-color: whitesmoke;
+  color: gray;
+  width: 80%;
+  height: 45px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10%;
+}
+
+#textobienvenido {
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  font-size: 300%;
+  margin-top: 20%;
+  margin-bottom: 0%;
+  font-family: "Nunito", sans-serif;
+}
+
+#Imagen {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -10%;
+  margin-bottom: 10px;
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .mi-input {
+    width: 50%; /* Ancho del input como el 50% del contenedor padre para pantallas más grandes */
   }
-  
-  #textobienvenido {
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    font-size: 300%;
-    margin-top: 20%;
-  }
-  
-  #Imagen {
-    margin-left: auto; /* Alinear la imagen al centro */
-    margin-right: auto;
-    display: block; /* Hacer que la imagen sea un bloque para ajustar el margen automáticamente */
-  }
-  
-  @media (min-width: 768px) {
-    .mi-input {
-      width: 50%; /* Ancho del input como el 50% del contenedor padre para pantallas más grandes */
-    }
+}
+
+.register-text {
+  margin-top: 50px;
+  font-size: 80%;
+  font-family: "Nunito", sans-serif;
+}
+
+.register-text a {
+  /* Boton de Inicio de Sesion */
+  color: #734a91;
+  text-decoration: underline;
+  font-weight: bold;
+  font-size: 85%;
+  margin-left: 50%;
+}
+
+@media (min-width: 768px) {
+  .container {
+    flex-direction: row; /* Cambiar a disposición de fila en pantallas más grandes */
   }
 
-  .register-text {
-    margin-top: 20px;
-    font-size: 80%;
-
+  .left-panel,
+  .right-panel {
+    width: 50%; /* Ambos paneles ocupan la mitad del ancho en pantallas medianas y grandes */
   }
+}
 
-  .register-text a {
-    color: #734a91; /* Cambia el color a tu preferencia */
-    text-decoration: underline; /* Agrega subrayado para indicar que es un enlace */
-    font-weight: bold;
-    font-size: 85%;
-    margin-left: 50%;
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1600px; /* Limitar el ancho máximo en pantallas muy grandes */
+    margin: 0 auto;
   }
-  
-  
-
-  @media screen and (max-width: 800px) {
-    .iniciar-sesion {
-      font-size: var(--font-size-9xl);
-    }
-    .email-field {
-      flex: 1;
-    }
-  }
-  @media screen and (max-width: 450px) {
-    .iniciar-sesion {
-      font-size: var(--font-size-2xl);
-    }
 }
