--- a/app/Registro/Registro.css
+++ b/app/Registro/Registro.css
@@ -147,7 +147,12 @@ body {
 
 .input-file-container {
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 45px;
+  margin: 0 auto;
 }
 
 .input-file-container input[type="file"] {
@@ -157,16 +162,17 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  cursor: pointer;
 }
 
-.input-file-container img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none; /* La imagen no debe interferir con la interacción del usuario con el input */
-  object-fit: cover; /* La imagen se ajustará al tamaño del input */
+.input-file-container label {
+  display: inline-block;
+  background-color: whitesmoke;
+  color: gray;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 1;
 }
 
 #credentialImage {
