--- a/app/chat/Chat.css
+++ b/app/chat/Chat.css
@@ -1,77 +1,20 @@
-/* Chat.css */
-.chat-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  background-color: #f3f4f6;
-}
-
-.chat-header {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-  color: #333;
-}
-
-.chat-messages {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  width: 80%;
-  max-width: 600px;
-  height: 70vh;
-  overflow-y: auto;
-  background: #fff;
-  padding: 1rem;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.message {
-  margin-bottom: 1rem;
+/*Estilo base*/
+.message-bubble {
+  max-width: 70%;
   padding: 0.5rem 1rem;
-  border-radius: 10px;
+  border-radius: 1rem;
+  margin: 0.5rem;
   word-wrap: break-word;
-  max-width: 80%;
 }
 
-.my-message {
+/* Estilo para la burbuja de mensaje del remitente */
+.sender-bubble {
+  background-color: #8f61ad;
   align-self: flex-end;
-  background-color: #d1f7c4;
 }
 
-.other-message {
+/* Estilo para la burbuja de mensaje del destinatario */
+.receiver-bubble {
+  background-color: #734a91;
   align-self: flex-start;
-  background-color: #f1f0f0;
-}
-
-.chat-form {
-  display: flex;
-  width: 80%;
-  max-width: 600px;
-  margin-top: 1rem;
-}
-
-.chat-input {
-  flex: 1;
-  padding: 0.5rem;
-  border: 2px solid #ccc;
-  border-radius: 5px 0 0 5px;
-  font-size: 1rem;
-}
-
-.chat-button {
-  padding: 0.5rem 1rem;
-  border: none;
-  background-color: #4caf50;
-  color: white;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-.chat-button:hover {
-  background-color: #45a049;
 }
